# cmake

./: README.md  build_FBXSDK_samples(2020.2.1_vs2019).bat
00/1/: CMakeLists.txt  build.bat  main.cpp
00/2_hello_headers/: CMakeLists.txt  build.bat
00/2_hello_headers/src/: hello.cpp  main.cpp
00/2_hello_headers/src/include/: hello.h
00/3_static_lib/: CMakeLists.txt  build.bat
00/3_static_lib/src/: hello.cpp  main.cpp
00/4_dll_lib/: CMakeLists.txt  build.bat
00/4_dll_lib/src/: hello.cpp  main.cpp
00/4_dll_lib/src/include/shared/: hello.h
01/: CMakeLists.txt
01/src/: 01.cpp
02/: CMakeLists.txt  TutorialConfig.h.in
02/ext/: mysqrt.cpp
02/src/: 02.cpp
helloWorld/: CMakeLists.txt
helloWorld/src/: helloWorld.cpp  helloWorld.h  helloWorld.h.in
